tests/baselines/reference/moduleProperty2.errors.txt
==== tests/cases/compiler/moduleProperty2.ts (2 errors) ====
    module M {
        function f() {
            var x;
        }
        var y;
        export var z;
        var test1=x;
                  ~
!!! moduleProperty2.ts(7,15): error TS2095: Could not find symbol 'x'.
        var test2=y; // y visible because same module
    }
    
    module N {
        var test3=M.y; // nope y private property of M
                    ~
!!! moduleProperty2.ts(12,17): error TS2094: The property 'y' does not exist on value of type 'typeof M'.
        var test4=M.z; // ok public property of M
    }